syntax = "proto3";

message AirVehicleGroundRelativeState {
  uint32 vehicle_id = 1;
  int32 angle_of_attack = 2;
  int32 angle_of_sideslip = 3;
  int32 true_airspeed = 4;
  int32 indicated_airspeed = 5;
  int32 north_wind_speed = 6;
  int32 east_wind_speed = 7;
  int32 north_ground_speed = 8;
  int32 east_ground_speed = 9;
  int32 barometric_pressure = 10;
  int32 barometric_altitude = 11;
}

message ArmCommand {
  uint32 id = 1;
  int32 position = 2;
}

message ArmPosition {
  int32 position1 = 1;
  int32 position2 = 2;
  int32 position3 = 3;
  int32 position4 = 4;
}

message Battery {
  uint32 batteryPercentage = 1;
}

message TargetAcknowledgement {
  uint32 target_status = 1;
}

message TargetDesignationCommand {
  uint32  vehicle_id = 1;
  uint32  payload_id = 2;
  uint32  target_id = 3;
  uint32  target_type = 4;
  int32  longitude = 5;
  int32  latitude = 6;
  int32  altitude = 7;
}

message TargetStatus {
  int64 target_radius = 1;
  int64 target_angle = 2;
  int64 target_altitude = 3;
}

message VehicleAttitude {
  uint32 vehicle_id = 1;
  int32 roll = 2;
  int32 pitch = 3;
  int32 yaw = 4;
}

message VehicleAuthorizationReply {
  uint32 vehicle_id = 1;
  uint32 vehicle_type = 2;
  uint32 authorized_services = 3;
  uint32 granted_services = 4;
}

message VehicleAuthorizationRequest {
  uint32 vehicle_id = 1;
  uint32 vehicle_type = 2;
  uint32 authorized_services = 3;
  uint32 granted_services = 4;
}

message VehicleBodySensedState {
  uint32 vehicle_id = 1;
  int32 x_accel = 2;
  int32 y_accel = 3;
  int32 z_accel = 4;
  int32 roll_rate = 5;
  int32 pitch_rate = 6;
  int32 yaw_rate = 7;
}

message VehicleGlobalPosition {
  uint32 vehicle_id= 1;
  int32 longitude = 2;
  int32 latitude = 3;
  int32 altitude = 4;
  int32 x_speed = 5;
  int32 y_speed = 6;
  int32 z_speed = 7;
}

message VehicleIdentification {
  uint32 vehicle_id = 1;
  uint32 vehicle_type = 2;
}

message VehicleInertialState {
  uint32 vehicle_id = 1;
  int32 longitude = 2;
  int32 latitude = 3;
  int32 altitude = 4;
  int32 roll = 5;
  int32 pitch = 6;
  int32 heading = 7;
  int32 north_speed = 8;
  int32 east_speed = 9;
  int32 vertical_speed = 10;
  int32 roll_rate = 11;
  int32 pitch_rate = 12;
  int32 yaw_rate = 13;
  int32 north_accel = 14;
  int32 east_accel = 15;
  int32 vertical_accel = 16;
}

message VehicleModeCommand {
  uint32 vehicle_id = 1;
  uint32 vehicle_mode = 2;
}

message VehicleSystemStatus {
  uint32 vehicle_id = 1;
  uint32 vehicle_mode = 2;
  uint32 vehicle_state = 3;
}

message VehicleTelemetryCommand {
  uint32 vehicle_id = 1;
  uint32 telemetry_select = 2;
  uint32 telemetry_rate = 3;
}

message VehicleTerminationCommand {
  uint32 vehicle_id = 1;
  uint32 termination_mode = 2;
}

message VehicleWaypointCommand {
  uint32 vehicle_id = 1;
  int32 longitude = 2;
  int32 latitude = 3;
  int32 altitude = 4;
}

message Packet {
  oneof packet {
    AirVehicleGroundRelativeState AirVehicleGroundRelativeState = 1;
    ArmCommand ArmCommand = 2;
    ArmPosition ArmPosition = 3;
    Battery Battery = 4;
    TargetAcknowledgement TargetAcknowledgement = 5;
    TargetDesignationCommand TargetDesignationCommand = 6;
    TargetStatus TargetStatus = 7;
    VehicleAttitude VehicleAttitude = 8;
    VehicleAuthorizationReply VehicleAuthorizationReply = 9;
    VehicleAuthorizationRequest VehicleAuthorizationRequest = 10;
    VehicleBodySensedState VehicleBodySensedState = 11;
    VehicleGlobalPosition VehicleGlobalPosition = 12;
    VehicleIdentification VehicleIdentification = 13;
    VehicleInertialState VehicleInertialState = 14;
    VehicleModeCommand VehicleModeCommand = 15;
    VehicleSystemStatus VehicleSystemStatus = 16;
    VehicleTelemetryCommand VehicleTelemetryCommand = 17;
    VehicleTerminationCommand VehicleTerminationCommand = 18;
    VehicleWaypointCommand VehicleWaypointCommand = 19;
  }
}
